# AndroidDemo

./: build.gradle  check.gradle  checkstyle.xml  config.gradle  gradle.properties  lint_options.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hlw/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.txt
app/src/main/assets/glsl/: simple_vertex_shader.glsl
app/src/main/assets/glsl/ndk/: fragment_rotate_smile_box.glsl  vertex_rotate_smile_box.glsl
app/src/main/assets/glsl/rectangle/: fragment.glsl
app/src/main/assets/glsl/texture/: fragment_image_texture.glsl  fragment_texture_shader.glsl  smile_box_fragment.glsl  smile_box_rotate_fragment.glsl  vertex_image_texture.glsl  vertex_texture_shader.glsl
app/src/main/assets/glsl/triangle/: color_triangle_fragment.glsl  fragment_3_0.glsl
app/src/main/c_source/: Draw3DSmileBox.cpp  DrawRectangleRenderer.c  DrawRotateSmileBox.cpp  DrawSmileBox.c  DrawTexture.c  Hello_Triangle.c
app/src/main/cpp/: CMakeLists.txt  DrawMain.c  DrawMain.cpp  Hello_Triangle.c  LinkUtil.c  LinkUtil.h  OtherUtil.c  OtherUtil.h  ndk_test.cpp
app/src/main/cpp/Common/: CMakeLists.txt
app/src/main/cpp/Common/Source/: esUtil.c
app/src/main/cpp/Common/Source/Win32/: esUtil_win32.c
app/src/main/cpp/test/: CMakeLists.txt  test.cpp
app/src/main/java/com/hlw/demo/: DemoApplication.java  MainActivity.java
app/src/main/res/drawable/: bg_btn_single_dialog_bottom_grey.xml  bg_dialog_white.xml  bg_switch.xml  bg_ui_dialog.xml  edittext_background.xml
app/src/main/res/layout/: activity_air_hockey_demo.xml  activity_ble_client.xml  activity_ble_server.xml  activity_horizontal_demo.xml  activity_loading_dialog.xml  activity_loading_views.xml  activity_main.xml  activity_opengl_demo.xml  activity_opengl_list.xml  activity_view_list.xml  dialog_download_ask.xml  dialog_download_process.xml  dialog_loading.xml  item_indicator.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  styles_circle_view.xml
app/src/test/java/com/hlw/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_loading/: build.gradle
lib_loading/src/androidTest/java/com/hlw/loading/: ApplicationTest.java
lib_loading/src/main/: AndroidManifest.xml
lib_ui/: build.gradle
lib_ui/src/main/: AndroidManifest.xml
lib_ui/src/main/res/drawable/: ic_back.xml  ic_right_arrow.xml
lib_ui/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
lib_usb/: build.gradle
lib_usb/src/main/: AndroidManifest.xml
loading_library/: build.gradle
module_bind_service/: build.gradle
module_bind_service/src/main/: AndroidManifest.xml
module_bind_service/src/main/res/layout/: activity_main.xml
module_bind_service/src/main/res/values/: strings.xml
module_hook/: build.gradle
module_hook/src/main/: AndroidManifest.xml
module_hook/src/main/res/layout/: activity_main.xml
module_hook/src/main/res/values/: strings.xml
module_opengl/: build.gradle
module_opengl/src/main/: AndroidManifest.xml
module_opengl/src/main/assets/glsl/: fragment_image_move_x.glsl  fragment_vertex_array_objects.glsl  fragment_vertex_buffer_objects.glsl  simple_vertex_shader.glsl  vertex_draw_rect.glsl  vertex_image_move_x.glsl  vertex_vertex_array_objects.glsl  vertex_vertex_buffer_objects.glsl
module_opengl/src/main/assets/glsl/texture/: fragment_image_texture.glsl  smile_box_fragment.glsl  smile_box_vertex.glsl
module_opengl/src/main/assets/glsl/triangle/: two_triangle_fragment.glsl
module_opengl/src/main/c_source/: Draw3DSmileBox.cpp  DrawCameraMoveByKeybroad.cpp  DrawCameraSpaceTestDemo.cpp  DrawMRTs.cpp  DrawMapBuffer.cpp  DrawMore3DSmileBox.cpp  DrawParticleSystem.cpp  DrawParticleSystemTransformFeedback.c  DrawRectangleLine.cpp  DrawRectangleRenderer.c  DrawRotateSmileBox.cpp  DrawSmallBox45Angle.cpp  DrawSmileBox.cpp  DrawTestGlTexImage2D.cpp  DrawTexture.c  DrawTransformSmileBox.cpp  DrawTriangle.c  DrawVertexArrayObjects.cpp  DrawVertexBufferObjects.cpp
module_opengl/src/main/cpp/: CMakeLists.txt  DrawMain.cpp  LinkUtil.c  LinkUtil.h  Noise3D.h
module_opengl/src/main/cpp/Common/: CMakeLists.txt
module_opengl/src/main/cpp/Common/Include/: esConstants.h  esUtil.h
module_opengl/src/main/cpp/Common/Source/: esUtil.c
module_opengl/src/main/cpp/glm/: manual.md
module_opengl/src/main/cpp/stb_image/: stb_image_resize.h  stb_truetype.h  stb_voxel_render.h
module_opengl/src/main/res/layout/: activity_opengl_list.xml
module_opengl/src/main/res/values/: strings.xml
moudle_opengl/: build.gradle
moudle_opengl/src/main/: AndroidManifest.xml
moudle_opengl/src/main/assets/glsl/: simple_vertex_shader_2.glsl
moudle_opengl/src/main/assets/glsl/ndk/: fragment_perspective_smile_box.glsl
moudle_opengl/src/main/assets/glsl/rectangle/: vertex.glsl
moudle_opengl/src/main/assets/glsl/texture/: smile_box_fragment.glsl  smile_box_rotate_vertex.glsl  smile_box_vertex.glsl
moudle_opengl/src/main/assets/glsl/triangle/: color_triangle_vertex.glsl
moudle_opengl/src/main/c_source/: DrawTexture.c  DrawTransformSmileBox.cpp
moudle_opengl/src/main/cpp/: CMakeLists.txt
moudle_opengl/src/main/cpp/Common/Include/: esUtil.h
moudle_opengl/src/main/cpp/Common/Source/Android/: esUtil_Android.c
moudle_opengl/src/main/res/layout/: activity_opengl_draw_demo.xml
(+215 files in other folders)
